--- a/packages/ui/src/components/alert/Alert.astro
+++ b/packages/ui/src/components/alert/Alert.astro
@@ -33,7 +33,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Alert, AlertTitle, AlertDescription } from '@bejamas/ui/components/alert';
  * ---
