--- a/packages/ui/src/components/avatar/Avatar.astro
+++ b/packages/ui/src/components/avatar/Avatar.astro
@@ -43,7 +43,7 @@
  * 
  * @usage
  * 
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Avatar, AvatarImage, AvatarFallback } from '@bejamas/ui/components/avatar';
  * ---
