--- a/packages/ui/src/components/breadcrumb/Breadcrumb.astro
+++ b/packages/ui/src/components/breadcrumb/Breadcrumb.astro
@@ -19,7 +19,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Breadcrumb, BreadcrumbList, BreadcrumbItem, BreadcrumbSeparator } from '@bejamas/ui/components/breadcrumb';
  * ---
