--- a/packages/ui/src/components/button-group/ButtonGroup.astro
+++ b/packages/ui/src/components/button-group/ButtonGroup.astro
@@ -15,7 +15,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { ButtonGroup } from '@bejamas/ui/components/button-group';
  * import { Button } from '@bejamas/ui/components/button';
