--- a/packages/ui/src/components/button/Button.astro
+++ b/packages/ui/src/components/button/Button.astro
@@ -16,7 +16,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Button } from '@bejamas/ui/components/button';
  * ---
@@ -28,7 +28,7 @@
  *
  * You can use the `as` prop to render the component as an anchor.
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Button } from '@bejamas/ui/components/button';
  * ---
