--- a/packages/ui/src/components/carousel/Carousel.astro
+++ b/packages/ui/src/components/carousel/Carousel.astro
@@ -15,7 +15,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Carousel, CarouselSlide } from '@bejamas/ui/components/carousel';
  * ---
