--- a/packages/ui/src/components/checkbox/Checkbox.astro
+++ b/packages/ui/src/components/checkbox/Checkbox.astro
@@ -47,7 +47,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Checkbox } from '@bejamas/ui/components/checkbox';
  * import { Label } from '@bejamas/ui/components/label';
