--- a/packages/ui/src/components/collapsible/Collapsible.astro
+++ b/packages/ui/src/components/collapsible/Collapsible.astro
@@ -25,7 +25,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Collapsible, CollapsibleTrigger, CollapsibleContent } from '@bejamas/ui/components/collapsible';
  * import { Button } from '@bejamas/ui/components/button';
