--- a/packages/ui/src/components/dialog/Dialog.astro
+++ b/packages/ui/src/components/dialog/Dialog.astro
@@ -47,7 +47,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Dialog, DialogTitle, DialogDescription, DialogContent, DialogFooter, DialogClose } from '@bejamas/ui/components/dialog';
  * import { Button } from '@bejamas/ui/components/button';
