--- a/packages/ui/src/components/dropdown-menu/DropdownMenu.astro
+++ b/packages/ui/src/components/dropdown-menu/DropdownMenu.astro
@@ -24,7 +24,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { DropdownMenu, DropdownMenuTrigger, DropdownMenuContent, DropdownMenuItem } from '@bejamas/ui/components/dropdown-menu';
  * import { Button } from '@bejamas/ui/components/button';
