--- a/packages/ui/src/components/item/Item.astro
+++ b/packages/ui/src/components/item/Item.astro
@@ -19,7 +19,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Item, ItemContent, ItemTitle, ItemDescription, ItemActions, ItemMedia } from '@bejamas/ui/components/item';
  * ---
