--- a/packages/ui/src/components/kbd/Kbd.astro
+++ b/packages/ui/src/components/kbd/Kbd.astro
@@ -27,7 +27,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Kbd, KbdGroup } from '@bejamas/ui/components/kbd';
  * ---
