--- a/packages/ui/src/components/link-group/LinkGroup.astro
+++ b/packages/ui/src/components/link-group/LinkGroup.astro
@@ -17,7 +17,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { LinkGroup, LinkGroupTitle, LinkGroupList, LinkGroupItem } from '@bejamas/ui/components/link-group';
  * ---
