--- a/packages/ui/src/components/marquee/Marquee.astro
+++ b/packages/ui/src/components/marquee/Marquee.astro
@@ -19,7 +19,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Marquee } from '@bejamas/ui/components/marquee';
  * ---
