--- a/packages/ui/src/components/radio-group/RadioGroup.astro
+++ b/packages/ui/src/components/radio-group/RadioGroup.astro
@@ -20,7 +20,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { RadioGroup, RadioGroupItem } from '@bejamas/ui/components/radio-group';
  * import { Label } from '@bejamas/ui/components/label';
