--- a/packages/ui/src/components/select/Select.astro
+++ b/packages/ui/src/components/select/Select.astro
@@ -28,7 +28,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Select, SelectControl, SelectPlaceholder, SelectOption, SelectIndicator } from '@bejamas/ui/components/select';
  * ---
