--- a/packages/ui/src/components/sticky-surface/StickySurface.astro
+++ b/packages/ui/src/components/sticky-surface/StickySurface.astro
@@ -24,7 +24,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { StickySurface } from '@bejamas/ui/components/sticky-surface';
  * ---
