--- a/packages/ui/src/components/switch/Switch.astro
+++ b/packages/ui/src/components/switch/Switch.astro
@@ -17,7 +17,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Switch } from '@bejamas/ui/components/switch';
  * import { Label } from '@bejamas/ui/components/label';
