--- a/packages/ui/src/components/tabs/Tabs.astro
+++ b/packages/ui/src/components/tabs/Tabs.astro
@@ -103,7 +103,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Tabs, TabsList, TabsTrigger, TabsContent } from '@bejamas/ui/components/tabs';
  * ---
