--- a/packages/ui/src/components/tooltip/Tooltip.astro
+++ b/packages/ui/src/components/tooltip/Tooltip.astro
@@ -17,7 +17,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Tooltip, TooltipTrigger, TooltipContent } from '@bejamas/ui/components/tooltip';
  * import { Button } from '@bejamas/ui/components/button';
