--- a/packages/ui/src/components/input-group/InputGroup.astro
+++ b/packages/ui/src/components/input-group/InputGroup.astro
@@ -45,7 +45,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { InputGroup, InputGroupInput, InputGroupAddon, InputGroupButton, InputGroupText } from '@bejamas/ui/components/input-group';
  * ---
