--- a/packages/ui/src/components/kbd/KbdGroup.astro
+++ b/packages/ui/src/components/kbd/KbdGroup.astro
@@ -23,7 +23,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Kbd, KbdGroup } from '@bejamas/ui/components/kbd';
  * ---
