--- a/packages/ui/src/components/separator/Separator.astro
+++ b/packages/ui/src/components/separator/Separator.astro
@@ -26,7 +26,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Separator } from '@bejamas/ui/components/separator';
  * ---
