--- a/packages/ui/src/components/textarea/Textarea.astro
+++ b/packages/ui/src/components/textarea/Textarea.astro
@@ -13,7 +13,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Textarea } from '@bejamas/ui/components/textarea';
  * ---
